--- a/amazone-clone/src/Componets/Product/Products.module.css
+++ b/amazone-clone/src/Componets/Product/Products.module.css
@@ -1,6 +1,6 @@
 .card_container {
     width: 197px;
-   height: 385px;
+   height: 495px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.586);
     padding: 10px;
     color: black;
@@ -47,4 +47,31 @@
     margin: 100px auto;
     gap: 50px;
     justify-items: center;
+}
+.product_fixed {
+    box-shadow: none;
+    height: auto;
+    display: flex;
+    gap: 50px;
+    width: 100%;
+}
+.product_fixed h3 {
+    padding: 20px 0px;
+}
+.product_fixed .button {
+    display: block !important;
+    position: static;
+    width: 150px;
+    margin-right: 40px;
+
+}
+.product_fixed img {
+    width: 300px !important;
+    height: auto;
+}
+@media screen and (max-width:768px){
+    .product_fixed {
+        display: flex;
+        flex-direction: column;
+    }
 }
