--- a/amazone-clone/src/Componets/Header/Header.module.css
+++ b/amazone-clone/src/Componets/Header/Header.module.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
-
+.fixed {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 .outerContainer {
   background-color: #131921;
   padding: 10px 20px;
