--- a/amazone-clone/src/Componets/Catagories/Catagory.module.css
+++ b/amazone-clone/src/Componets/Catagories/Catagory.module.css
@@ -33,7 +33,8 @@
     position: relative;
     margin-top: -10%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    max-width: 1600px;
     gap: 10px;
     place-items: center;
 
