--- a/amazone-clone/src/Pages/Payment/Payment.module.css
+++ b/amazone-clone/src/Pages/Payment/Payment.module.css
@@ -49,3 +49,15 @@
 .paymentDetails button:hover {
     background-color: rgba(255, 166, 0, 0.497);
 }
+@media screen and (max-width:769px) {
+    .flex {
+        flex-direction: column;
+    }
+}
+.loader {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    color: rgb(52, 52, 52);
+}
